--- a/Audio_Classification/Mel_Spectrogram.ipynb
+++ b/Audio_Classification/Mel_Spectrogram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a684fda1",
    "metadata": {},
    "outputs": [],
@@ -30,17 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "504999e5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PolyCollection at 0x7fd7df70cd60>"
+       "<matplotlib.collections.PolyCollection at 0x7f1173f8ccd0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "db544ed3",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f52fbfe1",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "b2a63ceb",
    "metadata": {},
    "outputs": [
@@ -140,10 +140,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7fd7df657dc0>"
+       "<matplotlib.collections.QuadMesh at 0x7f1173effdc0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -167,17 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "c952cf85",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7fd7df626ca0>"
+       "<matplotlib.collections.QuadMesh at 0x7f1173e4db80>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -202,17 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "d48b261e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7fd7df593a30>"
+       "<matplotlib.colorbar.Colorbar at 0x7f1173d206a0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -240,8 +240,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d8bfb1d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'> (128, 194)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Spectrogram is a 2D numpy array\n",
+    "print(type(mel_sgram), mel_sgram.shape)\n",
+    "# <class 'numpy.ndarray'> (128, 194)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cc45e70",
    "metadata": {},
    "outputs": [],
    "source": []
